--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,26 @@
-#驱动类名称
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#数据库连接的url
-spring.datasource.url=jdbc:mysql://localhost:3306/tlias
-#连接数据库的用户名
-spring.datasource.username=root
-#连接数据库的密码
-spring.datasource.password=980906
-
-#配置mybatis的日志, 指定输出到控制台
-mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
-
-#开启mybatis的驼峰命名自动映射开关 a_column ------> aCloumn
-mybatis.configuration.map-underscore-to-camel-case=true
-
+##驱动类名称
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+##数据库连接的url
+#spring.datasource.url=jdbc:mysql://localhost:3306/tlias
+##连接数据库的用户名
+#spring.datasource.username=root
+##连接数据库的密码
+#spring.datasource.password=980906
+#
+##配置mybatis的日志, 指定输出到控制台
+#mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+#
+##开启mybatis的驼峰命名自动映射开关 a_column ------> aCloumn
+#mybatis.configuration.map-underscore-to-camel-case=true
+#
+##一次请求最大文件
+#spring.servlet.multipart.max-request-size=1000MB
+#
+##单次文件最大大小
+#spring.servlet.multipart.max-file-size=10MB
+#
+##OSS
+#aliyun.oss.endpoint=http://oss-cn-beijing.aliyuncs.com
+#aliyun.oss.accessKeySecret=501VpeGau523PYARRqQea1vgHYWn6R
+#aliyun.oss.accessKeyId=IjDOeJGoF3AA9Suk
+#aliyun.oss.bucketName=oss-tuchuang-lhb
