Springboot_tlias_dome v1.0.4 20231029

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,3 +25,7 @@ aliyun:
     accessKeySecret: 501VpeGau523PYARRqQea1vgHYWn6R
     accessKeyId: IjDOeJGoF3AA9Suk
     bucketName: oss-tuchuang-lhb
+
+logging:
+  level:
+    org.springframework.jdbc.support.JdbcTransactionManager: debug
